--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= title %></title>
+    <%- include('head'); %>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <%- include('header'); -%>
+    <main>
+        <h1>Hello World</h1>
+    </main>
+    <%- include('footer'); -%>
 </body>
 </html>
