--- a/src/views/footer.ejs
+++ b/src/views/footer.ejs
@@ -1,3 +1,5 @@
 <footer>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="/jquery/dist/jquery.min.js"></script>
+    <script src="/js/header.js" type="text/javascript"></script>
+    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
 </footer>
