--- a/src/views/category/getCategories.ejs
+++ b/src/views/category/getCategories.ejs
@@ -6,6 +6,14 @@
 <body>
 <%- include('../header'); -%>
 <main class="container">
+    <div class="container mt-2">
+    <% if (success && Object.keys(success).length > 0) { %>
+        <div class="alert alert-success" role="alert"><%= success %></div>
+    <% } %>
+    <% if (error && Object.keys(error).length > 0) { %>
+        <div class="alert alert-danger" role="alert"><%= error %></div>
+    <% } %>
+    </div>
     <h1 class="mb-4 mt-2">List of all Categories</h1>
     <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
         <% categories.forEach((category) => { %>
@@ -45,8 +53,8 @@
                         <a href="/products/<%= categories[i]._id %>">View Products</a>
                     </td>
                     <td>
-                        <button type="button" class="btn btn-warning">Update</button>
-                        <button type="button" class="btn btn-danger">Delete</button>
+                        <a href="/category/<%= categories[i]._id %>/update" type="button" class="btn btn-warning">Update</a>
+                        <a href="/category/<%= categories[i]._id %>/delete" onclick="return confirm('Are you sure you want to delete this item?');" type="button" class="btn btn-danger">Delete</a>
                     </td>
                 </tr>
             <% } %>
