Add Forms CRUD Product

--- a/src/views/category/getCategory.ejs
+++ b/src/views/category/getCategory.ejs
@@ -6,11 +6,11 @@
 <body>
 <%- include('../header'); -%>
 <main class="container">
-    <div class="card" style="width: 18rem;">
+    <div class="col-12 row justify-content-center mt-2"></div>
+    <div class="card">
         <div class="card-body">
             <h5 class="card-title"><%= category.categoryName %></h5>
             <h6 class="card-subtitle mb-2 text-muted"><%= category._id %></h6>
-            <p class="card-text"></p>
         </div>
     </div>
 </main>
