--- a/src/views/category/createCategory.ejs
+++ b/src/views/category/createCategory.ejs
@@ -10,7 +10,7 @@
     <form method="post" action="/category-post-create">
         <div class="mb-3">
             <label for="categoryName" class="form-label">Name :</label>
-            <input type="text" class="form-control" id="categoryName" name="categoryName" aria-describedby="categoryNameText">
+            <input type="text" class="form-control" id="categoryName" name="categoryName">
         </div>
         <button type="submit" class="btn btn-success">Create</button>
     </form>
