--- a/src/views/category/updateCategory.ejs
+++ b/src/views/category/updateCategory.ejs
@@ -11,7 +11,7 @@
         <input type="hidden" name="categoryID" value="<%= category._id %>" />
         <div class="mb-3">
             <label for="categoryName" class="form-label">Name :</label>
-            <input type="text" class="form-control" id="categoryName" name="categoryName" value="<%= category.categoryName %>" aria-describedby="categoryNameText">
+            <input type="text" class="form-control" id="categoryName" name="categoryName" value="<%= category.categoryName %>">
         </div>
         <button type="submit" class="btn btn-warning">Update</button>
     </form>
