--- a/src/views/product/getProducts.ejs
+++ b/src/views/product/getProducts.ejs
@@ -6,31 +6,64 @@
 <body>
 <%- include('../header'); -%>
 <main class="container">
-    <h1>List of all Products</h1>
-    <table class="table table-striped">
-        <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">ID</th>
-            <th scope="col">Name</th>
-            <th scope="col">Price</th>
-            <th scope="col">Description</th>
-            <th scope="col">Category_ID</th>
-        </tr>
-        </thead>
-        <tbody>
-        <% for(var i=0; i < products.length; i++) { %>
-            <tr>
-                <th scope="row"><%= i+1 %></th>
-                <td><%= products[i]._id %></td>
-                <td><%= products[i].productName %></td>
-                <td><%= products[i].productPrice %>€</td>
-                <td><%= products[i].productDescription %></td>
-                <td><%= products[i].productCategory %></td>
-            </tr>
+    <div class="container mt-2">
+        <% if (success && Object.keys(success).length > 0) { %>
+            <div class="alert alert-success" role="alert"><%= success %></div>
         <% } %>
-        </tbody>
-    </table>
+        <% if (error && Object.keys(error).length > 0) { %>
+            <div class="alert alert-danger" role="alert"><%= error %></div>
+        <% } %>
+    </div>
+    <h1 class="mb-4 mt-2">List of all Products</h1>
+    <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
+        <% products.forEach((product) => { %>
+            <div class="col">
+                <div class="card border-dark mb-3 h-100">
+                    <div class="card-header">ID : <%= product._id %></div>
+                    <div class="card-body text-dark">
+                        <h5 class="card-title"><%= product.productName %></h5>
+                        <p class="card-text"><%= product.productDescription %></p>
+                        <p class="card-text"><%= product.productPrice %>€</p>
+                        <a href="/product/<%= product._id %>" class="card-link">View</a>
+                        <a href="/category/<%= product.productCategory %>" class="card-link">Category</a>
+                    </div>
+                </div>
+            </div>
+        <% }); %>
+    </div>
+    <div class="container mt-5">
+        <a href="/product-create" type="button" class="btn btn-success">Create</a>
+        <table class="table table-striped mt-2">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">ID</th>
+                <th scope="col">Name</th>
+                <th scope="col">Price</th>
+                <th scope="col">Link</th>
+                <th scope="col">Action</th>
+            </tr>
+            </thead>
+            <tbody>
+            <% for(var i=0; i < products.length; i++) { %>
+                <tr>
+                    <th scope="row"><%= i+1 %></th>
+                    <td><%= products[i]._id %></td>
+                    <td><%= products[i].productName %></td>
+                    <td><%= products[i].productPrice %></td>
+                    <td>
+                        <a href="/product/<%= products[i]._id %>">View</a>
+                        <a href="/category/<%= products[i].productCategory %>">Category</a>
+                    </td>
+                    <td>
+                        <a href="/product-update/<%= products[i]._id %>" type="button" class="btn btn-warning">Update</a>
+                        <a href="/product-delete/<%= products[i]._id %>" onclick="return confirm('Are you sure you want to delete this item?');" type="button" class="btn btn-danger">Delete</a>
+                    </td>
+                </tr>
+            <% } %>
+            </tbody>
+        </table>
+    </div>
 </main>
 <%- include('../footer'); -%>
 </body>
